working game with even and odd nums incrementing

--- a/game-app/src/app/app.component.html
+++ b/game-app/src/app/app.component.html
@@ -1,3 +1,9 @@
 <div>
-  <app-gamecontrol (numberIncremented)=""></app-gamecontrol> 
+  <app-gamecontrol (intervalFired)="onIntervalFired($event)"></app-gamecontrol> 
+</div>
+<div>
+  <app-odd *ngFor="let oddNumber of oddNumbers" [number]="oddNumber"></app-odd>
+</div>
+<div>
+  <app-even *ngFor="let evenNumber of evenNumbers" [number]="evenNumber"></app-even>
 </div>
