--- a/game-app/src/app/gamecontrol/gamecontrol.component.html
+++ b/game-app/src/app/gamecontrol/gamecontrol.component.html
@@ -1,2 +1,2 @@
-<button (click)="onIncrement()">Start</button>
-<button>Stop</button>
+<button (click)="onStartGame()">Start Game</button>
+<button (click)="onPauseGame()">Stop Game</button>
