--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -8,10 +8,12 @@
    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
+
+
 <div class="row">
   <div class="col-xs-12">
    <div 
-    class="btn-group"
+    class="btn-group dropdown show"
     appDropdown
    >
      <button 
@@ -20,9 +22,9 @@
        <span class="caret"></span>
      </button>
      <ul class="dropdown-menu">
-       <li><a href="#">The Shopping List</a></li>
-       <li><a href="#">Edit Recipe</a></li>
-       <li><a href="#">Delete Recipe</a></li>
+       <li><a class="dropdown-item" style="cursor: pointer;" (click)="onAddToShoppingList()">To Shopping List</a></li>
+       <li><a href="#" class="dropdown-item">Edit Recipe</a></li>
+       <li><a href="#" class="dropdown-item">Delete Recipe</a></li>
      </ul>
    </div>
   </div>
@@ -34,6 +36,10 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ ingredient.name }} - {{ ingredient.amount }}
+      </li>
+    </ul>
   </div>
 </div>
